--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
               <img class="img-fluid" src="img/portfolio/07-car.JPG" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
+              <h4>718 GTS</h4>
               <p class="text-muted">Illustration</p>
             </div>
           </div>
@@ -507,12 +507,12 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Project Name</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/07-car.JPG" alt="">
+                  <p>포르쉐 718 GTS 입니다!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Date: 2018/10/19</li>
+                    <li>Client: 안호진</li>
+                    <li>Category: Car</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
